maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:18: error: Unit does not take parameters
  } else(){
          ^